// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render a button 1`] = `
<button
  class="sc-bdfBwQ fxFazj"
  color="primary"
  font-size="large"
>
  My button
</button>
`;

exports[`<Button /> should render a button with black color 1`] = `
<button

  class="sc-bdfBwQ cevdSC"
  color="black"
  font-size="large"
>
  My button
</button>
`;

exports[`<Button /> should render a button with error color 1`] = `
<button
  class="sc-bdfBwQ ZBlUh"
  color="error"
  font-size="large"
>
  My button
</button>
`;

exports[`<Button /> should render a button with grey color 1`] = `
<button
  class="sc-bdfBwQ fGbbph"
  color="grey"
  font-size="large"
>
  My button
</button>
`;

exports[`<Button /> should render a button with primary color 1`] = `
<button
  class="sc-bdfBwQ fxFazj"
  color="primary"
  font-size="large"
>
  My button
</button>
`;

exports[`<Button /> should render a button with revPrimary color 1`] = `
<button
  class="sc-bdfBwQ hVcVyn"
  color="revPrimary"
  font-size="large"
>
  My button
</button>
`;

exports[`<Button /> should render a large button 1`] = `
<button
  class="sc-bdfBwQ fxFazj"
  color="primary"
  font-size="large"
>
  My button
</button>
`;

exports[`<Button /> should render a medium button 1`] = `
<button
  class="sc-bdfBwQ bgUPwJ"
  color="primary"
  font-size="large"
>
  My button
</button>
`;

exports[`<Button /> should render a small button 1`] = `
<button
  class="sc-bdfBwQ cNyiwV"
  color="primary"
  font-size="large"
>
  My button
</button>
`;

exports[`<Button /> should render a x-large button 1`] = `
<button
  class="sc-bdfBwQ hNasJy"
  color="primary"
  font-size="large"
>
  My button
</button>
`;
